small addition to page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h4>Hello Coursera</h4>
+<h4>Hello Coursera! Its a good course</h4>
 </body>
 </html>
